--- a/src/pages/en/index.mdx
+++ b/src/pages/en/index.mdx
@@ -5,7 +5,9 @@ title: "Welcome"
 import BaseLayout from '@/layouts/BaseLayout.astro';
 
 <BaseLayout title={frontmatter.title} lang={frontmatter.lang}>
-    # Hello! This is the Home
+    <div set:html={frontmatter.body}>
+        # Hello! This is the Home
 
-    Welcome to the site in **British English**.
+        Welcome to the site in **British English**.
+    </div>
 </BaseLayout>
