Ajustes no TinaCMS

--- a/src/pages/pt/curriculo/index.mdx
+++ b/src/pages/pt/curriculo/index.mdx
@@ -1,14 +1,6 @@
 ---
-title: "Currículo"
-description: "Meu currículo profissional"
+description: Meu currículo profissional
+title: Currículo
 ---
 
-import BaseLayout from '@/layouts/BaseLayout.astro';
-
-<BaseLayout title={frontmatter.title}>
-  <div set:html={frontmatter.body}>
-    # Currículo
-
-    Aqui está meu histórico profissional em **português**.
-  </div>
-</BaseLayout>
+Teste de Currículo em Português
